fixed #5: animations run on IOS

--- a/scss/components/_animations.scss
+++ b/scss/components/_animations.scss
@@ -40,7 +40,9 @@
 
 .hiddenLeft {
     @extend .hidden;
-    transform: translateX(-90%);
+    @media (orientation:landscape) {
+        transform: translateX(-90%);
+    }
     transition-delay: 2s;
 }
 
@@ -52,8 +54,10 @@
 
 .hiddenRight {
     @extend .hidden;
-    transform: translateX(90%);
-    //transition-delay: 4s;
+    @media (orientation:landscape) {
+        transform: translateX(90%);
+    }
+    transition-delay: 4s;
     
 }
 
